crates/graphite/tests/ui/bad_multiplicity.stderr
error: 多重度は (1) / (0..1) / (0..*) のいずれかのみサポートします
  --> tests/ui/bad_multiplicity.rs:17:55
   |
17 |             edge Employee -[belongs_to]-> Department (2..5);
   |                                                       ^
